# Trading-Automation-Worker

./: .gitignore  Dockerfile  Dockerfile.base  README.md  pyproject.toml  requirements.txt
app/: bootstrap.py  logger.py  main.py
configs/: app.json
trading-automation-worker/: pyproject.toml
trading-automation-worker/app/: bootstrap.py  main.py
trading-automation-worker/app/data/: ITaskEmitter.py  ITaskFetcher.py
trading-automation-worker/app/data/strategy/grpc/proto/: types.proto
trading-automation-worker/app/networkLayer/: INetworkDataSource.py  NetworkLayer.py
trading-automation-worker/app/networkLayer/common/: __init__.py  types.py
trading-automation-worker/app/networkLayer/common/task/: ActivisionTask.py  BaseTask.py  DeactivationTask.py  TransactionTask.py  __init__.py
trading-automation-worker/app/networkLayer/common/utils/: TaskParser.py
trading-automation-worker/app/networkLayer/dataSource/grpc/: DefaultServicer.py  GrpcDataSource.py  client.py
trading-automation-worker/app/networkLayer/dataSource/grpc/proto/: myService.proto  types.proto
trading-automation-worker/app/networkLayer/dataSource/rabbitmq/: ConsumerRepository.py  IConsumer.py  IConsumerRepository.py  __init__.py
trading-automation-worker/app/networkLayer/dataSource/rabbitmq/common/: types.py
trading-automation-worker/app/networkLayer/dataSource/rabbitmq/dataSource/: AsyncRabbit.py  RabbitMQConsumer.py
trading-automation-worker/app/service/queueService/: ConsumerRepository.py  IConsumer.py  IConsumerRepository.py  WorkQueueConsumer.py  __init__.py
trading-automation-worker/app/service/queueService/common/: __init__.py  types.py
trading-automation-worker/app/service/queueService/dataSource/: AsyncRabbit.py  RabbitMQConsumer.py  __init__.py
trading-automation-worker/app/service/queueService/utils/: TaskParser.py
trading-automation-worker/scripts/: proto_build.sh
(+38 files in other folders)
