[project]
name = "trading-automation-worker"
version = "0.1.0"
description = ""
authors = [{ name = "RoieGolst", email = "roiegol9@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "typing-extensions>=4.12.2,<5",
    "mypy-protobuf>=3.6.0,<4",
    "grpcio>=1.68.0,<2",
    "grpcio-tools>=1.68.0,<2",
    "protoletariat>=3.3.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
