[tool.poetry]
name = "trading-automation-worker"
version = "0.1.0"
description = ""
authors = ["RoieGolst <roiegol9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"
typing-extensions = "^4.12.2"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
